<resources>
    <string name="app_name" translatable="false">PixivMuzei</string>

    <string name="source_name" translatable="false">Pixiv</string>
    <string name="source_description">:3</string>

    <string name="pref_changeInterval">Change Interval</string>
    <string name="pref_changeInterval_default" translatable="false">180</string>
    <string name="pref_onlyWifi">Only Over WIFI</string>
    <string name="pref_noManga">Exclude Comics</string>
    <string name="pref_noR18">Exclude R-18 Artworks</string>
    <string name="pref_sourceMode_default" translatable="false">recommend</string>
    <string name="pref_sourceMode">Source</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_default" translatable="false">auto</string>
    <string name="pref_login">Login to Pixiv</string>
    <string name="pref_loadAmount">Loading Amount of Images</string>
    <string name="pref_loadAmount_default" translatable="false">50</string>
    <string name="pref_checkUpdate">Check Update</string>
    <string name="pref_deleteCaches">Delete Caches</string>
    <string name="pref_autoCheckUpdate">Auto Check Update</string>
    <string name="pref_changelog">Changelog</string>
    <string name="pref_about">About</string>
    <string name="pref_license">PixivMuzei</string>
    <string name="pref_license_summary">© 2016–2018 Guo Zheng–Yan</string>
    <string name="pref_license_title">PixivMuzei</string>
    <string name="pref_openSourceLicenses">Open Source Licenses</string>
    <string name="pref_openSourceLicenses_title">Open Source Licenses</string>

    <string name="action_download">Download Image</string>
    <string name="textUsername">Username:</string>
    <string name="textPassword">Password:</string>
    <string name="btnTxtConfirm">Confirm</string>
    <string name="btnTxtCancel">Cancel</string>
    <string name="btnTxtLogin">Login</string>
    <string name="btnTxtLogout">Logout</string>
    <string name="labelLogin">Login</string>
    <string name="labelLogout">Logout</string>

    <string name="toast_notLoggedIn">Not logged in</string>
    <string name="toast_loginSuccess">Login succeeded</string>
    <string name="toast_loginFail">Login failed</string>
    <string name="toast_logedOut">Loged out</string>
    <string name="toast_downloading">Downloading…</string>
    <string name="toast_downloadSuccess">Download succeeded</string>
    <string name="toast_downloadFail">Download failed</string>
    <string name="toast_interval_is_zero">Change interval can\'t be zero</string>
    <string name="toast_updateFail">Update failed</string>
    <string name="toast_isNewest">You are using the latest version</string>
    <string name="toast_connectFailed">Connect failed</string>
    <string name="toast_noNet">No network available</string>
    <string name="toast_noWIFI">No WIFI available</string>
    <string name="toast_deleteCachesSucceed">Delete completed</string>
    <string name="toast_noCahcesExist">No caches exist</string>

    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more…</string>

    <string name="txtDays">Days</string>
    <string name="txtHours">Hours</string>
    <string name="txtMinutes">Mins</string>
    <string name="title_update">Update</string>
    <string name="txtNewVersion">New version available</string>
    <string name="btnDownloadUpdate">Download</string>
    <string name="txtVersion">Latest version: </string>
    <string name="btn_delete">Delete</string>
    <string name="txt_cacheSize">Cache size:</string>

    <string name="nf_update_title">Update Available!</string>
    <string name="nf_update_text">Click to download PixivMuzei</string>


</resources>
