<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textUsername"
            android:id="@+id/txtUsername" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textPassword"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnTxtCancel"
            android:id="@+id/btnCancel"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="cancel" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnTxtLogin"
            android:id="@+id/btnConfirm"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="saveData"
            android:nestedScrollingEnabled="true" />
    </LinearLayout>

</LinearLayout>