<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="150dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp">

        <NumberPicker
            android:id="@+id/numPicker01"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtTimePicker"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtDays"
            android:textAlignment="center"
            android:textSize="20dp" />

        <NumberPicker
            android:id="@+id/numPicker02"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtTimePicker02"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtHours"
            android:textAlignment="center"
            android:textSize="20dp" />

        <NumberPicker
            android:id="@+id/numPicker03"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtTimePicker03"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtMinutes"
            android:textAlignment="center"
            android:textSize="20dp" />
    </LinearLayout>
</LinearLayout>